------------------------------------------------------------------------
r1850 | rdahnke | 2021-06-28 11:58:16

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_main.m
M       cat_main1639.m
M       cat_main_registration.m
M       cat_main_roi.m
M       cat_main_updateSPM.m
M       cat_main_write.m
M       cat_run.m
M       cat_tst_calc_kappa.m
M       cat_tst_qa_cleaner.m
M       cat_vol_qa.m
M       cat_vol_resize.m
MM      cat_vol_sample.m
 M      html/images/cat_SLC_msk_c0009s0010t01A.png
M       internal/cat_tst_BWPres.m
M       templates_animals/chimpanzee_T1.nii
M       templates_animals/chimpanzee_TPM.nii
M       templates_animals/chimpanzee_Template_0_GS.nii
M       templates_animals/chimpanzee_Template_1_GS.nii
M       templates_animals/chimpanzee_Template_2_GS.nii
M       templates_animals/chimpanzee_Template_3_GS.nii
M       templates_animals/chimpanzee_Template_4_GS.nii
A       templates_animals/chimpanzee_atlas_davi.csv
M       templates_animals/chimpanzee_atlas_davi.nii
A       templates_animals/chimpanzee_atlas_davi.txt
M       templates_animals/chimpanzee_brainmask.nii
M       templates_animals/chimpanzee_cat.nii

(1) Changed:  Updated 1 mm chimpanzee template.
              See also http://junachimp.inm7.de/
(2) Changed:  Added full data export in cat_main_registration and cat_main_write
              in case of multiple ouput resolutions (extopts.vox) and experimental 
              setting (extopts.experimental) in the developer mode to support
              evaluation of enhanced Shooting templates (also include changes
              in cat_main[1639].
(3) Fixed:    Corrected tiny bug with extended vox value in cat_main_roi.
(4) New:      Added new cases in the image resolution batch to reduce images  
              with denoising by smoothing within the reduced neighborhood in   
              cat_conf_tools and cat_vol_resize. 
(5) Fixed:    Corrected problems in cat_vol_qa in case of other missig bias 