@@ -635,18 +635,27 @@ function resize = conf_vol_resize(data,prefix,expert,outdir)
   restype.val     = {res}; 
   restype.help    = {'The images can be resize to (i) a specific resolution and (ii) to the space of another images (like in ImCalc). '};
   if ~scale.hidden
-    restype.help  = [ restype.help {'Moreover, the data of the volume can be rescaled, e.g., to adopt template data for other species. The images are not resliced in this case. '}];
+    restype.help  = [ restype.help; {'Moreover, the data of the volume can be rescaled, e.g., to adopt template data for other species. The images are not resliced in this case. '}];
   end
     
   % imcalc interpolation field
   imcalc            = spm_cfg_imcalc;
   method            = imcalc.val{6}.val{3}; 
-  method.labels{9}  = 'Downsample (hard)';
-  method.values{9}  = 2; 
-  method.labels{10} = 'Downsample (medium)';
-  method.values{10} = 3; 
-  method.labels{11} = 'Downsample (soft)';
-  method.values{11} = 4; 
+  if 1 % extended version with filtering
+    method.labels{9}  = 'Downsample Trilinear (hard)';
+    method.values{9}  = -1001; 
+    method.labels{10} = 'Downsample Trilinear (medium)';
+    method.values{10} = -2001; 
+    method.labels{11} = 'Downsample Trilinear (soft)';
+    method.values{11} = -3001; 
+    method.labels{9}  = 'Downsample 5th Degree Sinc (hard)';
+    method.values{9}  = -1005; 
+    method.labels{10} = 'Downsample 5th Degree Sinc (medium)';
+    method.values{10} = -2005; 
+    method.labels{11} = 'Downsample 5th Degree Sinc (soft)';
+    method.values{11} = -3005; 
+    restype.help      = [ restype.help; {'If image dimensions are downsampled, prior Gaussian filtering allows denoising.  The FWHM can be defined as the ratio of the new to the original voxel size:'; ' vx_vol_org ./ vx_vol_org - 1'; 'E.g. an image of 0.2x0.2x0.5 mm downsampled to 0.5x0.5x0.5 mm supports smoothing with FWHM=[3 3 0], which reduces noise along the downsampled axis.  The levels are available for coarse individual adjustments (hard: FWHM/4; medium: FWHM/2; soft: FWHM). ' ''}];  
+  end
   clear imcalc
   
   prefix.val      = {'r'}; 
