@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1850 | rdahnke | 2021-06-28 11:58:16
+r1851 | rdahnke | 2021-06-28 14:44:01
+
+Changed paths:
+M       CHANGES.txt
+M       cat_conf_tools.m
+M       cat_vol_resize.m
+
+(1) Changed:  Corrected parameter definions and updated help in resize batch 
+              with changes in cat_conf_tools and cat_vol_resize.
+------------------------------------------------------------------------
+r1850 | dahnke | 2021-06-28 11:59:10 +0200 (Mo, 28 Jun 2021) | 52 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -52,6 +62,7 @@ M       templates_animals/chimpanzee_cat.nii
               resolution rating in such images. 
 (7) Changed:  Tiny cosmetic changes in cat_tst_qa_cleaner and cat_tst_calc_kappa.              
               
+
 ------------------------------------------------------------------------
 r1849 | dahnke | 2021-06-25 11:05:24 +0200 (Fr, 25 Jun 2021) | 32 lines
 
